--- a/pixel-art/src/styles/_properties.scss
+++ b/pixel-art/src/styles/_properties.scss
@@ -1,4 +1,4 @@
-$black: #222831;
-$grey: #30475e;
-$white: #e8e8e8;
-$red: #f05454;
+$background: #222831;
+$secondary-accent: #30475e;
+$text: #e8e8e8;
+$primary-accent: #f05454;
