--- a/pixel-art/src/components/Pattern/Switcher.css
+++ b/pixel-art/src/components/Pattern/Switcher.css
@@ -1,8 +1,14 @@
 #pattern-nav {
     display: flex;
     flex-direction: row;
+    gap: 5px;
 }
 
 #pattern-nav > li {
     list-style: none;
+}
+
+.switch-nav-btn {
+    font-size: 16px;
+    width: fit-content;
 }
