--- a/pixel-art/src/styles/App.scss
+++ b/pixel-art/src/styles/App.scss
@@ -9,6 +9,14 @@ html,
   width: 100%;
 }
 
+a {
+  color: $secondary-accent;
+}
+
+a:hover {
+  color: $primary-accent;
+}
+
 body {
   background: $background;
   color: $text;
